--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
